Finished module loading. Fixed memory allocation bugs.

--- a/boot/x86/grub.cfg
+++ b/boot/x86/grub.cfg
@@ -3,7 +3,6 @@ set default=0
 
 menuentry "simplex" {
   multiboot2 /simplex.sys
-  module2 /uart.sys
-  module2 /test.sys
+  module2 /uart.sys Simplex Booted
   boot
 }
