--- a/boot/x86/grub.cfg
+++ b/boot/x86/grub.cfg
@@ -2,8 +2,8 @@ set timeout=0
 set default=0
 
 menuentry "simplex" {
-  multiboot2 /simplex.sys
-  module2 /uart.sys Simplex Booted
-  module2 /shell.sys
+  multiboot2 /boot/simplex.sys
+  module2 /boot/uart.sys Simplex Booted
+  module2 /boot/shell.sys
   boot
 }
