Updated the UART driver to use the library.

--- a/modules/uart/Makefile
+++ b/modules/uart/Makefile
@@ -3,23 +3,17 @@ include $(ROOTDIR)/config.mk
 
 OBJECTS += $(patsubst %.c,%.o,$(wildcard arch/$(ARCH)/*.c))
 
-ASMSRC = $(wildcard arch/$(ARCH)/*.asm)
-ASMOBJ = $(patsubst %.asm,%.o,$(ASMSRC))
-
 MODULE_FILE = $(ROOTDIR)/uart.sys
 
-LDFLAGS += -e __entry
+LDFLAGS += -l$(LIB_NAME)
 
 .PHONY: clean
 
-$(MODULE_FILE): $(OBJECTS) $(ASMOBJ)
+$(MODULE_FILE): $(OBJECTS)
 	$(LD) $(LDFLAGS) -o $@ $^
 
 $(OBJECTS): %.o: %.c
 	$(CC) $(CFLAGS) -o $@ $<
-
-$(ASMOBJ): %.o: %.asm
-	$(ELFASM) -o $@ $<
 
 clean:
 	rm *.o arch/*/*.o $(MODULE_FILE)
