Started working on x86 specific drivers (VGA & PS/2).

--- a/boot/x86/grub.cfg
+++ b/boot/x86/grub.cfg
@@ -5,5 +5,7 @@ menuentry "simplex" {
   multiboot2 /boot/simplex.sys
   module2 /boot/uart.sys Simplex Booted
   module2 /boot/shell.sys
+  module2 /boot/x86vga.sys
+  module2 /boot/x86ps2.sys
   boot
 }
