Added a improved x86ps2 module and added x86tty module (work in progress).

--- a/boot/x86/grub.cfg
+++ b/boot/x86/grub.cfg
@@ -7,5 +7,6 @@ menuentry "simplex" {
   module2 /boot/shell.sys
   module2 /boot/x86vga.sys
   module2 /boot/x86ps2.sys
+  module2 /boot/x86tty.sys
   boot
 }
