Added a PCI driver (work in progress).

--- a/boot/x86/grub.cfg
+++ b/boot/x86/grub.cfg
@@ -4,7 +4,7 @@ set default=0
 menuentry "simplex" {
   multiboot2 /boot/simplex.sys
   module2 /boot/uart.sys Simplex Booted
-  module2 /boot/shell.sys
+  module2 /boot/pci.sys
   module2 /boot/x86vga.sys
   module2 /boot/x86ps2.sys
   module2 /boot/x86tty.sys
